feat(settings): add StyledCheckBox component + fix translation tab labels
- Created PowerTune/Settings/components/StyledCheckBox.qml with dark theme
  styling matching existing StyledSwitch/StyledComboBox/StyledTextField patterns:
  - 28x28 checkbox with teal (#009688) accent on checked state
  - White checkmark drawn with rotated rectangles
  - 44px touch target height for Raspberry Pi touchscreen use
  - Animated color/opacity transitions (150ms)
  - Properties: checked (bool), label/text (string)

- Registered StyledCheckBox in:
  - PowerTune/Settings/qmldir (module type registration)
  - CMakeLists.txt (build system QML file list)

- Fixed 'Translation not found' tab labels in SerialSettings.qml:
  - Root cause: 'Speed' and 'RPM' tab model keys collided with datasource
    translation entries that have empty 'en' values in Translator.js
  - Fix: Changed ListModel keys to 'Speedtab' and 'RPM2' which are the
    correct tab-specific translation keys with proper en/de/jp/es values
  - Tabs now correctly show: Main, Dash Sel., Sensehat, Warn/Gear, Speed,
    Analog, RPM, EX Board, Startup, Network

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -314,6 +314,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
             PowerTune/Settings/components/StyledComboBox.qml
             PowerTune/Settings/components/StyledSwitch.qml
             PowerTune/Settings/components/StyledTextField.qml
+            PowerTune/Settings/components/StyledCheckBox.qml
             PowerTune/Settings/components/ConnectionStatusIndicator.qml
         RESOURCE_PREFIX /qt/qml
         OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/qt/qml/PowerTune/Settings
