feat(core): Add SensorRegistry for runtime sensor availability tracking
Implement SensorRegistry class that tracks which sensors are actually
available at runtime, replacing the static list approach in the dashboard
creator.

New files:
- Core/SensorRegistry.h: Header with full public API, Q_PROPERTY
  declarations, Q_INVOKABLE methods, and SensorSource enum
- Core/SensorRegistry.cpp: Implementation with built-in sensor
  registration (GPS, SenseHat), common CAN sensor registration,
  analog/digital/expander board input refresh, and CAN timeout logic

Modified files:
- CMakeLists.txt: Added SensorRegistry.h/.cpp to build
- Core/connect.h: Added SensorRegistry forward declaration and member
- Core/connect.cpp: Create SensorRegistry instance, expose as QML
  context property, call refresh methods after settings load

Sensor sources supported:
- CAN/Daemon (auto-detected, with 10s timeout for inactive marking)
- Analog Inputs (AN1-AN11)
- Digital Inputs (DI1-DI4)
- Expander Board (EX_AN1-EX_AN8)
- GPS (latitude, longitude, altitude, speed, heading, satellites)
- SenseHat (accelerometer X/Y/Z)
- Computed (for derived values)

QML API exposed as "SensorRegistry" context property with:
- availableCount, availableSensors, availableCategories properties
- getSensorsByCategory(), isAvailable(), getDisplayName(), getUnit()
- refreshAnalogInputs(), refreshExpanderBoard(), refreshDigitalInputs()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ set(CORE_SOURCES
     Core/serialport.cpp
     Core/appsettings.cpp
     Core/PropertyRouter.cpp
+    Core/SensorRegistry.cpp
     Core/Models/UIState.cpp
     Core/Models/EngineData.cpp
     Core/Models/VehicleData.cpp
@@ -87,6 +88,7 @@ set(CORE_HEADERS
     Core/serialport.h
     Core/appsettings.h
     Core/PropertyRouter.h
+    Core/SensorRegistry.h
     Core/Models/UIState.h
     Core/Models/DataModels.h
     Core/Models/EngineData.h
