feat(diagnostics): Add DiagnosticsProvider C++ backend class
Phase 8: Implement DiagnosticsProvider for the Diagnostics settings page.

New files:
- Core/DiagnosticsProvider.h - Header with Q_PROPERTY declarations for
  system info (CPU temp, memory, uptime), CAN bus metrics (message rate,
  error count, connection status), serial connection info, sensor summary
  counts, and a circular log buffer. Q_INVOKABLE methods expose live sensor
  data, analog input diagnostics (AN1-AN11), digital input diagnostics
  (DI1-DI4), and expander board diagnostics (EX_AN1-EX_AN8).

- Core/DiagnosticsProvider.cpp - Full implementation with:
  - Platform-specific system info: Linux /sys/class/thermal + /proc/meminfo,
    macOS Mach host_statistics64 API for memory, sysctl for CPU thermal level
  - 2-second timer for system info polling
  - 1-second timer for CAN message rate calculation
  - SensorRegistry integration for live sensor data and counts
  - Circular log buffer (max 200 entries, newest first)
  - CAN tracking methods (recordCanMessage, recordCanError, setCanStatus)
  - Connection info setter (setConnectionInfo)
  - Stub analog/digital/expander diagnostics with TODO markers for
    future model wiring

Modified files:
- CMakeLists.txt - Added DiagnosticsProvider.h/.cpp to CORE_HEADERS/CORE_SOURCES
- Core/connect.h - Forward declaration and m_diagnosticsProvider member
- Core/connect.cpp - Include, initialize, create instance, wire to
  SensorRegistry, expose as "Diagnostics" QML context property

QML API surface (context property "Diagnostics"):
  Properties: cpuTemperature, memoryUsagePercent, uptime, systemTime,
    canConnected, canMessageRate, canErrorCount, canTotalMessages, daemonName,
    connectionType, serialConnected, serialPort, serialBaudRate,
    activeSensorCount, totalSensorCount, logMessages
  Methods: getLiveSensorData(), getAnalogInputDiagnostics(),
    getDigitalInputDiagnostics(), getExpanderBoardDiagnostics(),
    addLogMessage(level, message), clearLo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ set(CORE_SOURCES
     Core/appsettings.cpp
     Core/PropertyRouter.cpp
     Core/SensorRegistry.cpp
+    Core/DiagnosticsProvider.cpp
     Core/Models/UIState.cpp
     Core/Models/EngineData.cpp
     Core/Models/VehicleData.cpp
@@ -89,6 +90,7 @@ set(CORE_HEADERS
     Core/appsettings.h
     Core/PropertyRouter.h
     Core/SensorRegistry.h
+    Core/DiagnosticsProvider.h
     Core/Models/UIState.h
     Core/Models/DataModels.h
     Core/Models/EngineData.h
