feat(settings): add Diagnostics settings page and tab
Create a new DiagnosticsSettings.qml page with a 2x2 grid layout
displaying real-time system diagnostics from DiagnosticsProvider:

- Top-left panel: System info (CPU temp, memory, uptime, system time,
  active sensor count)
- Top-right panel: Connection status (CAN bus status with green/red
  indicators, daemon name, message rate, error count, serial port info,
  connection type)
- Bottom-left panel: Active sensors table (name, unit, source) with
  2-second auto-refresh timer via getLiveSensorData()
- Bottom-right panel: Log console with dark terminal styling, monospace
  green text, auto-scroll, and clear button

Files created:
- PowerTune/Settings/DiagnosticsSettings.qml

Files modified:
- PowerTune/Core/SerialSettings.qml - Added "Diagnostics" as 11th tab
  (index 10) in tab bar and StackLayout
- PowerTune/Settings/qmldir - Registered DiagnosticsSettings 1.0
- CMakeLists.txt - Added DiagnosticsSettings.qml to QML_FILES

Design: Dark theme (#1a1a2e bg, #1e1e3a panels, #009688 teal accent),
fits 1600x684px without page-level scrolling. Scrolling only allowed
within sensor list and log console panels.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,6 +311,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
             PowerTune/Settings/StartupSettings.qml
             PowerTune/Settings/NetworkSettings.qml
             PowerTune/Settings/CanMonitor.qml
+            PowerTune/Settings/DiagnosticsSettings.qml
             PowerTune/Settings/HelpPage.qml
             PowerTune/Settings/WifiCountryList.qml
             PowerTune/Settings/components/SettingsPage.qml
